update more results

--- a/page3.html
+++ b/page3.html
@@ -108,11 +108,11 @@
 
   <div style="text-align: center; padding: 1em">
     <!-- Navigation links -->
-    <strong>Page 1</strong>
+    <a href="page1.html">Page 1</a>
     &nbsp;&bull;&nbsp;
     <a href="page2.html">Page 2</a>
     &nbsp;&bull;&nbsp;
-    <a href="page3.html">Page 3</a>
+    <strong>Page 3</strong>
   </div>
 
 <!-- Updated instructions with icons -->
@@ -191,10 +191,10 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Define the list of available viser models in specific order
       const viserModels = [
-        'viser-stroller',
-        'viser-train',
-        'viser-bonn',
-        'viser-lady',
+        'viser-cows',
+        'viser-crossing',
+        'viser-rollerblade',
+        'viser-test'
       ];
       
       // Assign specific models to each iframe
