--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <p style="text-align: center;">
         <a href="files\St4RTrack_paper.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://arxiv.org/abs/2504.13152" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <!-- <a href="page1.html" target="_blank" style="font-weight: bold; color: rgb(238, 60, 223);">[Interactive Results🔥]</a> &nbsp;&nbsp;&nbsp;&nbsp; -->
+        <a href="page1.html" target="_blank" style="font-weight: bold; color: rgb(238, 60, 223);">[Interactive Results]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://github.com/Junyi42/monst3r" target="_blank">[Code (soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
@@ -207,8 +207,8 @@
   <!-- Begin new content: Demos -->
 <div class="content">
     <h2>Interactive 4D Visualization</h2>
-    <!-- <p>Explore the 4D reconstruction results of St4RTrack on various dynamic scenes. Please visit <a href="page1.html" style="font-weight: bold; color: rgb(238, 60, 223);">interactive results</a> for more examples.</p>-->
-     <p>Explore the 4D reconstruction results of St4RTrack on various dynamic scenes.</p> 
+    <p>Explore the 4D reconstruction results of St4RTrack on various dynamic scenes. Please visit <a href="page1.html" style="font-weight: bold; color: rgb(238, 60, 223);">interactive results</a> for more examples.</p>
+     <!-- <p>Explore the 4D reconstruction results of St4RTrack on various dynamic scenes.</p>  -->
   <!-- Instructions with icons -->
   <div class="instructions" style="margin-top: -1em;">
     
