--- a/page2.html
+++ b/page2.html
@@ -108,9 +108,9 @@
 
   <div style="text-align: center; padding: 1em">
     <!-- Navigation links -->
-    <strong>Page 1</strong>
+    <a href="page1.html">Page 1</a>
     &nbsp;&bull;&nbsp;
-    <a href="page2.html">Page 2</a>
+    <strong>Page 2</strong>
     &nbsp;&bull;&nbsp;
     <a href="page3.html">Page 3</a>
   </div>
@@ -191,10 +191,10 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Define the list of available viser models in specific order
       const viserModels = [
-        'viser-stroller',
-        'viser-train',
-        'viser-bonn',
-        'viser-lady',
+        'viser-bear',
+        'viser-camel',
+        'viser-gold-fish',
+        'viser-hike',
       ];
       
       // Assign specific models to each iframe
