update index.html to include teaser video

--- a/index.html
+++ b/index.html
@@ -176,21 +176,19 @@
     <!-- </p> -->
     </p>
 
-    <br>
-        <img src="./files/teaser_st4rtrack.png" class="teaser-gif" style="width:100%;"><br>
+    <!-- <br> 
+      <img src="./files/teaser_st4rtrack.png" class="teaser-gif" style="width:100%;"><br> -->
 
     <!-- add video files/teaser_vid_v2_lowres.mp4 -->
-    <!-- <video width="100%" controls>
-      <source src="./files/teaser_vid_v2_lowres.mp4" type="video/mp4">
-    </video> -->
-    <!-- <br> -->
-    <!-- <br> -->
+    <video width="100%" controls style=" margin-top: -22.5px; margin-bottom: 12.5px">
+      <source src="./files/st4rtrack_teaser_vid_lowres.mp4" type="video/mp4">
+    </video>
 
     <a style="text-align:center">
       <font size="+1">
         Given an RGB video capturing dynamic scenes, <strong>St4RTrack</strong> simultaneously tracks the points from the initial frame
-(<span style="color: rgb(0,0,189);">visualized in blue</span>) and reconstructs the geometry of the subsequent frames (<span style="color: rgb(189,0,0);">in red</span>) in a consistent world coordinate frame.
-<strong>St4RTrack</strong> is a <em>feed-forward</em> framework that takes a pair of images as input and outputs two pointmaps in the world frame. By iteratively processing the first frame paired with each subsequent frame, <strong>St4RTrack</strong> achieves simultaneous tracking and reconstruction for the entire video.
+(<span style="color: rgb(0,0,189);">visualized in blue</span>) and reconstructs the geometry of the subsequent frames (<span style="color: rgb(189,0,0);">in red</span>) in a consistent world coordinate.
+<strong>St4RTrack</strong> is a <em>feed-forward</em> framework that takes a pair of images and outputs two pointmaps in the world frame. By iteratively processing the first frame paired with each other frame, <strong>St4RTrack</strong> achieves simultaneous tracking and reconstruction for the entire video.
       </font>
     </a>
     <font size="+2">
@@ -198,7 +196,7 @@
         <a href="files\St4RTrack_paper.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://arxiv.org/abs/2504.13152" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="page1.html" target="_blank" style="font-weight: bold; color: rgb(238, 60, 223);">[Interactive Results]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/Junyi42/monst3r" target="_blank">[Code (soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://St4RTrack.github.io" target="_blank">[Code (soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
@@ -412,3 +410,4 @@
 </body>
 
 </html>
+
