update stroller result on the main page

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       // Generate random number between 1-4
-      const randomNum = Math.floor(Math.random() * 8) + 1;
+      const randomNum = Math.floor(Math.random() * 13) + 1;
       // Set the iframe src with the random number
-      document.getElementById('viser-iframe').src = `https://junyi42-viser-test${randomNum}.hf.space/`;
+      document.getElementById('viser-iframe').src = `https://havenfeng-viser-stroller${randomNum}.hf.space/`;
     });
   </script>
 
