--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <a>
       <strong>Left</strong>: DUSt3R reconstructs two images of a static scene, and aligns them in the same camera coordinate system.
       <br><strong>Middle</strong>: MonST3R works for dynamic scenes, but it reconstructs the geometry of two frames in their own timestamp.
-      <br><strong>Right</strong>: St4RTrack estimatess two pointmaps at the same timestamp. It predicts how the points in the first frame move to the second frame, and reconstructs the geometry of the second frame.
+      <br><strong>Right</strong>: St4RTrack estimates two pointmaps at the same timestamp. It predicts how the points in the first frame move to the second frame, and reconstructs the geometry of the second frame.
     </a>
 
   </div>
