set autoplay for teaser vide; add visual sep for page123.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <img src="./files/teaser_st4rtrack.png" class="teaser-gif" style="width:100%;"><br> -->
 
     <!-- add video files/teaser_vid_v2_lowres.mp4 -->
-    <video width="100%" controls style=" margin-top: -22.5px; margin-bottom: 12.5px">
+    <video width="100%" controls autoplay style=" margin-top: -22.5px; margin-bottom: 12.5px">
       <source src="./files/st4rtrack_teaser_vid_lowres.mp4" type="video/mp4">
     </video>
 
