minor, update acceptance

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         <a href="https://www.stanford.edu/"><sup>3</sup> Stanford University</a>
       </span>
       <span class="institution">(*: equal contribution, interchangeable)</span>
-      <!-- <br>
-      <span class="conference">ICLR 2025 (Spotlight)</span>
-      <br> -->
-      <!-- <br> -->
+      <br>
+      <span class="conference"><em>ICCV 2025</em></span>
+      <br>
+      <br>
     <!-- </p> -->
     </p>
 
