--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@
   <div class="content">
     <h2>BibTex</h2>
     <font size="-0.">
-    <code> @article{st4rtrack2025,<br>
+    <code> @inproceedings{st4rtrack2025,<br>
     &nbsp;&nbsp;title={St4RTrack: Simultaneous 4D Reconstruction and Tracking in the World},<br>
-    &nbsp;&nbsp;author={Feng, Haiwen and Zhang, Junyi and Wang, Qianqian and Ye, Yufei and Yu, Pengcheng and Black, Michael J. and Darrell, Trevor and Kanazawa, Angjoo},<br>
-    &nbsp;&nbsp;journal={arXiv preprint arxiv:2504.13152},<br>
+    &nbsp;&nbsp;author={Feng*, Haiwen and Zhang*, Junyi and Wang, Qianqian and Ye, Yufei and Yu, Pengcheng and Black, Michael J. and Darrell, Trevor and Kanazawa, Angjoo},<br>
+    &nbsp;&nbsp;booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},<br>
     &nbsp;&nbsp;year={2025}<br>
     } </code>
   </font>
